--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.10.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.5",
+    "validator": "^13.1.17"
   }
 }
