--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
+    "uuid": "^8.3.0",
     "validator": "^13.1.17"
   }
 }
