--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "uuid": "^8.3.0",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "vue": "^2.6.12"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
